# stm_system_board_firmware

./: Cargo.toml  Dockerfile  Embed.toml  build.rs  memory.x  stabilizer.cfg
.cargo/: config
src/: lib.rs
src/hardware/: design_parameters.rs  ecp5.rs  eeprom.rs  lm75a.rs  mod.rs  setup.rs
src/hardware/devices/: mod.rs
src/hardware/devices/hvsup_isol/: hvsupnegneg.rs  hvsupnegpos.rs  hvsupposneg.rs  hvsuppospos.rs  mod.rs
src/hardware/devices/max1329/: adc.rs  dac.rs  mod.rs
src/hardware/devices/nucleo_tester/: green.rs  mod.rs  red.rs  yellow.rs
src/hardware/devices/silpa/: alternative.rs  mod.rs  silpadefault.rs  tester.rs
src/net/: data_stream.rs  mod.rs  network_processor.rs  settings.rs  telemetry.rs
