[package]
name = "stm_sys_board"
version = "0.1.0"
resolver = "2"
authors = [
	"Tomasz Przywózki <Tomasz.Przywozki@pw.edu.pl>",
]
description = "Firmware for the Sinara STM System Board"
categories = ["embedded"]
license = "MIT OR Apache-2.0"
keywords = ["ethernet"]
repository = "https://github.com/elhep/stm_system_board_firmware"
readme = "README.md"
documentation = ""
edition = "2023"
exclude = [
	".gitignore",
	"doc/",
	"doc/*"
]

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = []
default-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7", features = ["device"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
rtt-target = { version = "0.3", features = ["cortex-m"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
heapless = { version = "0.7.10", features = ["serde"] }
cortex-m-rtic = "1.0"
embedded-hal = "0.2.7"
nb = "1.0.0"
asm-delay = "0.9.0"
num_enum = { version = "0.5.7", default-features = false }
paste = "1"
idsp = "0.7.1"
miniconf = "0.5"
smoltcp-nal = { version = "0.2", features = ["shared-stack"] }
serde-json-core = "0.4"
mcp23017 = "1.0"
mutex-trait = "0.2"
minimq = "0.5.3"
fugit = "0.3"
rtt-logger = "0.2"
systick-monotonic = "1.0"
mono-clock = "0.1"

[dependencies.stm32h7xx-hal]
features = ["stm32h743v", "rt", "unproven", "ethernet", "xspi"]
version = "0.11.0"

[features]
default = [ ]
nightly = ["cortex-m/inline-asm"]
#ext_ref_burned = [ ]

[profile.dev]
codegen-units = 1
incremental = false
opt-level = 3

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
